--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOGGER_ID=
-MONGO_DB_URI=
-OWNER_ID=
-STRING_SESSION=
-
+API_ID=26871967
+API_HASH=584a20e919b8620bc4b4a42baf6cf6c0
+BOT_TOKEN=8486916090:AAEar3iiy-FJvNrUFO68BgXIu7PdiZI25lU
+LOGGER_ID=-1002637154131
+MONGO_DB_URI=mongodb+srv://pusers:nycreation@nycreation.pd4klp1.mongodb.net/?retryWrites=true&w=majority&appName=NYCREATION
+OWNER_ID=8185684222
+STRING_SESSION=BQGaCJ8AglzGa-76fwzXzgNtYkOBCwYkIopxKunYEp8JkEoJJRMVcouQMOiXsjQOkWoon0ZbB-QTYZBpacBXueOJC-p-vWlBlaXdc7rA9We-w--ZMGPh9H5XNeqaKVB128GMb-GOM8pH4T3Zc3QOoddPCWZ5VQLBxz93B-ZCFYVUyXJkTkM-waqagkHGf0zA42yl4O-GZtJX_HAv-N8rCcmyOK_XD-Af5nvBVpMo4QkHlm3sJ7Zf8ww0OwGr1mrb47eoPXIYtwKCF9CPXZFp4o-cLqXjfIGepQDHxaqoy0LxyMbbcIiZphVLWIFd_rmVQAPJIOMh_I2lPVDB7sm015TtmcsRYgAAAAHzMDOVAA
